--- a/config/bbs.conf
+++ b/config/bbs.conf
@@ -1,5 +1,5 @@
 [program:bbs]
 command=/usr/local/bin/gunicorn wsgi -c gunicorn.config.py
-directory=/var/www/bbs
+directory=/bbs
 autostart=true
 autorestart=true
