加入docker 更改了文件结构

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     stdin_open: true
     tty: true
     build:
-      context: ./
+      context: .
       dockerfile: ./Dockerfile
     volumes:
       - ./bbs_app:/bbs/bbs_app
