--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - bbs_app:/bbs/bbs_app
+      - ./bbs_app:/bbs/bbs_app
       # - ./nginx_flask.conf:/etc/nginx/sites-available/nginx_flask.conf
       # - ./gunicorn.conf:/etc/supervisor/conf.d/gunicorn.conf
       # - ./supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
