加入docker 更改了文件结构

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: bbsdb
     volumes:
-      - /var/lib/postgresql/9.5/main:/var/lib/postgresql/docker-data
+      - /var/lib/postgresql/9.5/main:/db/data
 
   api:
     #restart: always
