--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ./bbs_app:/bbs/bbs_app
+      - ../www:/www
       # - ./nginx_flask.conf:/etc/nginx/sites-available/nginx_flask.conf
       # - ./gunicorn.conf:/etc/supervisor/conf.d/gunicorn.conf
       # - ./supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
