--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: bbsdb
-      PGDATA : /var/lib/postgresql/data/pgdata
+      # PGDATA : /var/lib/postgresql/data/pgdata
     volumes:
       - /var/lib/postgresql/9.5/main:/var/lib/postgresql/data/pgdata
 
