--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: bbsdb
       # PGDATA : /var/lib/postgresql/data/pgdata
-    volumes:
-      - /var/lib/postgresql/9.5/main:/var/lib/postgresql/data/pgdata
+#    volumes:
+#      - /var/lib/postgresql/9.5/main:/var/lib/postgresql/data/pgdata
 
   adminer:
     image: adminer
