加入docker 更改了文件结构

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   api:
     #restart: always
     stdin_open: true
-    tty: true
+    # tty: true
     build:
       context: .
       dockerfile: ./Dockerfile
