--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "2"
 services:
   db:
     image: postgres
-    restart: always
+    # restart: always
     environment:
       POSTGRES_PASSWORD: root
 
