加入docker 更改了文件结构

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -7,7 +7,7 @@ autostart=true
 autorestart=true
 
 [program:bbs]
-command=/usr/local/bin/gunicorn wsgi -b localhost:2000
+command=/usr/local/bin/gunicorn wsgi:application -b localhost:2000
 directory=/bbs/bbs_app
 autostart=true
 autorestart=true
