--- a/bbs_app/requirements.txt
+++ b/bbs_app/requirements.txt
@@ -1,11 +1,54 @@
+aiohttp==1.0.1
+alembic==0.8.10
+async-timeout==1.0.0
+bleach==1.4
+blinker==1.3
+certifi==2017.4.17
+chardet==2.3.0
 click==6.7
-Flask==0.12.2
+cssselect==1.0.1
+dominate==2.3.1
+ecdsa==0.13
+Flask==0.12
+Flask-Bootstrap==3.0.3.1
 Flask-JWT==0.3.2
-Flask-SQLAlchemy==2.3.2
+Flask-Login==0.3.1
+Flask-Mail==0.9.0
+Flask-Migrate==2.0.3
+Flask-Moment==0.2.1
+Flask-PageDown==0.1.4
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+flask-whooshee==0.4.1
+Flask-WTF==0.14.2
 ForgeryPy==0.1
+future==0.16.0
+gunicorn==19.7.1
+html5lib==1.0b3
+idna==2.5
 itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
+Jinja2==2.9.5
+lxml==3.8.0
+Mako==1.0.6
+Markdown==2.3.1
+MarkupSafe==0.23
+multidict==2.1.0
+psycopg2==2.7.3.2
+pycryptodome==3.4.9
 PyJWT==1.4.2
-SQLAlchemy==1.2.6
-Werkzeug==0.14.1
+pymongo==3.5.0
+PyMySQL==0.7.10
+pyquery==1.2.17
+python-editor==1.0.3
+python-jose==2.0.2
+redis==2.10.6
+requests==2.18.1
+six==1.4.1
+SQLAlchemy==1.1.5
+urllib3==1.21.1
+virtualenv==15.2.0
+visitor==0.1.3
+webencodings==0.5.1
+Werkzeug==0.11.15
+Whoosh==2.7.4
+WTForms==2.1
