--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "2"
 
 services:
-#  db:
-#    image: postgres:9.5
-#    # restart: always
-#    environment:
-#      POSTGRES_PASSWORD: root
+  db:
+    image: postgres:9.5
+    # restart: always
+    environment:
+      POSTGRES_PASSWORD: root
 
 
 #  adminer:
