加入docker 更改了文件结构

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   db:
-    image: postgres:9.5
+    image: postgres:alpine
     # restart: always
     environment:
       POSTGRES_PASSWORD: root
