--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     # restart: always
     environment:
       POSTGRES_PASSWORD: root
+      PGDATA: /var/lib/postgresql/data/bbs-data
 
 
 #  adminer:
