--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: root
       PGDATA: /var/lib/postgresql/data/bbs-data
+      POSTGRES_DB: bbsdb
 
 
 #  adminer:
