--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   db:
     image: postgres:alpine
     # restart: always
-    ports:
-      - "5432:5432"
+#    ports:
+#      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: root
       PGDATA: /var/lib/postgresql/data/bbs-data
@@ -25,6 +25,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    link: db
     volumes:
       - ../www:/www
       # - ./nginx_flask.conf:/etc/nginx/sites-available/nginx_flask.conf
