--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       POSTGRES_DB: bbsdb
 
 
-#  adminer:
-#    image: adminer
-#    restart: always
-#    ports:
-#      - "8081:8081"
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8081:8081"
 
   api:
     #restart: always
