--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
     environment:
       POSTGRES_PASSWORD: root
       PGDATA: /var/lib/postgresql/data/bbs-data
-      POSTGRES_DB: bbsdb
 
 
   adminer:
@@ -27,7 +26,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     links:
-     - db:bbsdatabase
+     - db:bbsdb
     volumes:
       - ../www:/www
       # - ./nginx_flask.conf:/etc/nginx/sites-available/nginx_flask.conf
