--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
 
       # PGDATA 用于指定数据库文件位置, 默认值为: /var/lib/postgresql/9.5/main(官网的跟这个不一样, 这是现查的)
       # PGDATA: /var/lib/postgresql/data/bbs-data
+      PGDATA: /var/lib/postgresql/9.5/main
 
     # 表示db在这个默认网路中(default network)的假名是bbsdb
     networks:
