--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.2"
 services:
   db:
     image: postgres:alpine
-    # restart: always
+    restart: always
     ports:
       - "5431:5432"
     environment:
