修改了 docker-compose的挂载方式 database_uri加了一个备用选项

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
       - type: "bind"
 #        source: ../bbsdb  # 在根目录
 #        target: /var/lib/postgresql/data
-        source: "/var/lib/postgresql/9.5/main"  # host
+        source: "/root/bbsdb"  # host
 #        target: "/var/lib/postgresql/9.5/main"  # container
-        target: /var/lib/postgresql/data/bbs-data  # container
+        target: /var/lib/postgresql/data/  # container
 
   adminer:
     image: adminer
