--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
 
     # 一般build指定Dockerfile路径(绝对或者相对路径)
     build: .
+
+#    or
 #    build:
 #      context: .
 #      dockerfile: ./Dockerfile
@@ -55,7 +57,7 @@ services:
 
     volumes:
       - ../www:/www
-#      - ./bbs_app:/bbs/bbs_app
+      - ./bbs_app:/bbs/bbs_app
       - ./bbs.nginx:/etc/nginx/sites-available/bbs.nginx
       # - ./gunicorn.conf:/etc/supervisor/conf.d/gunicorn.conf
       - ./supervisor.conf:/etc/supervisor/conf.d/supervisor.conf
