--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "5431:5432"
     environment:
       # PostgreSQL的 superuser 的密码, 而superuser是由POSTGRES_USER定义
-      POSTGRES_PASSWORD: root
+      POSTGRES_PASSWORD: postgres
 
       # POSTGRES_USER 如果没有指定则使用默认用户 ( postgres ??? )
 
