修改了 docker-compose的挂载方式 将代码也做挂载处理

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       # PostgreSQL的 superuser 的密码, 而superuser是由POSTGRES_USER定义
 #      POSTGRES_PASSWORD: 123456
 
-      PGUSER: bbspostgres
+      PGUSER: postgres
       PGPASSWORD: 123456
 
       # POSTGRES_USER 如果没有指定则使用默认用户 ( postgres ??? )
