--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,9 @@ services:
     image: mysql
     # 不确定这里要不要加mysqld
     # command: mysqld --default-authentication-plugin=mysql_native_password
+    command: mysqld
+    ports:
+      - "3305:3306"
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: mysql123
