--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,10 @@ services:
 #        # 使用/var/lib/postgresql/data 会报错, Duplicate mount point: /var/lib/postgresql/data 目前不知道原因
 
   db:
-    image: mysql
+    image: mysql:5.6
     # 不确定这里要不要加mysqld
     # command: mysqld --default-authentication-plugin=mysql_native_password
-    command: mysqld
+    # command: mysqld
     ports:
       - "3305:3306"
     restart: always
