修改了 docker-compose的挂载方式 将代码也做挂载处理

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     environment:
 
       # 这里根本没用到
-#      POSTGRES_USER: bbspostgres
+      POSTGRES_USER: bbspostgres
       # PostgreSQL的 superuser 的密码, 而superuser是由POSTGRES_USER定义
-#      POSTGRES_PASSWORD: 123456
+      POSTGRES_PASSWORD: 123456
 
-      PGUSER: postgres
-      PGPASSWORD: 123456
+#      PGUSER: postgres
+#      PGPASSWORD: 123456
 
       # POSTGRES_USER 如果没有指定则使用默认用户 ( postgres ??? )
 
