--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,12 @@ services:
       - "5431:5432"
     environment:
 
-      # 这里根本没用到
-#      POSTGRES_USER: bbspostgres
+#      POSTGRES_USER: bbspostgres  # 无法设置superuser, 只能单独用POSTGRES_PASSWORD才能成功设置密码.
+
       # PostgreSQL的 superuser 的密码, 而superuser是由POSTGRES_USER定义
       POSTGRES_PASSWORD: 123456
 
-#      PGUSER: postgres
-#      PGPASSWORD: 123456
-
-      # POSTGRES_USER 如果没有指定则使用默认用户 ( postgres ??? )
+      # POSTGRES_USER 如果没有指定则使用默认用户 ( postgres)
 
       # POSTGRES_DB 定义数据库名, 如果没有指定, 则使用 POSTGRES_USER 的值
 
